--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -9,21 +9,24 @@
 
 /* Style Menu/Nav Bar */
 
-#menu-bar{
+.menu-bar{
     padding:20px;
     background: #f96e5b;
 }
-#menu-bar a{
+.menu-bar a{
     text-decoration: none;
     color: white;
     padding: 20px;
 }
-#menu-bar a:hover{
+.menu-bar a:hover{
     color: #000000; 
 }
 #right-menu{
     float: right;
     font-weight: bold;
+}
+.menu-bar .icon {
+    display: none;
 }
 
 /* Style Home Page content */
@@ -173,7 +176,6 @@ form {
 }
 .right-half{
     text-align: center;
-    background: url(images/bg-2.jpg);
     width: 50%;
     right: 0px;
     padding-top: 50px;
@@ -255,4 +257,80 @@ form {
 #right-container{
     float: right;
     width: 40%;
+}
+
+/* Responsive table */
+
+.reponsivetable{
+    overflow-x:auto;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 700px) {
+    .menu-bar a:not(:first-child) {display: none;}
+    .menu-bar a.icon {
+      float: right;
+      display: block;
+    }
+    .menu-bar.responsive {position: relative;}
+    .menu-bar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .menu-bar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    #right-menu{
+        float: none;
+    }
+    #background{
+        background-image: none;
+        background-color: #33ccff;
+    }
+    #home-content{
+        width: 100%;
+    }
+    #home-hungry{
+        font-size: 50px;
+    }
+    #left-container{
+        float: none;
+        overflow-x:auto; 
+        width: 100%;   
+    }
+    #right-container{
+        float: none;
+        overflow-x:auto;    
+        width: 100%;
+    
+    }
+    .image-container img{
+        width: 100%;
+        float: none;
+    }
+    form {
+        float: none;
+    
+    }
+    .left-half img{
+        display: none;
+        width: 100%;
+        position: absolute;
+        left: auto;
+        height: auto;
+        padding-left: none;
+    }
+    .right-half{
+        text-align: center;
+        width: 100%;
+        right: auto;
+        padding-top: none;
+        margin-top:none;
+    }
+    .left-half{
+        display: none;
+    }
+   
 }
