--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -362,6 +362,9 @@ form {
         font-weight: 400;
         text-decoration: none;
     }
+    .link{
+        text-decoration: none;
+    }
         
    
 }
